<resources>
    <string name="app_name">SpotLog</string>
    <string name="action_settings">Settings</string>
    <string name="menu_clear">Clear log</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_one_hour">1 hour</string>
    <string name="menu_filter_twelve_hours">12 hours</string>
    <string name="menu_filter_all">Show all</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_export">Share log</string>
    <string name="tile_spotlog">Log song</string>
    <string name="btn_play">Play button</string>
    <string name="no_history">No history!</string>

    <string name="share_title">SpotLog data</string>
    <string name="share_title_full">Share SpotLog data</string>

    <string name="action_song_deleted">Song deleted</string>
    <string name="action_undo">Undo</string>
    <string name="action_log_cleared">Log cleared</string>

    <!-- Notification -->
    <string name="notif_channel_name">Foreground service logger</string>
    <string name="notif_channel_description">This is the visible notification when foreground-loggin is turned on.</string>
    <string name="notif_action_title">Stop</string>
    <string name="notif_content_title">Spotlog</string>
    <string name="notif_content_text">Logging Spotify songs…</string>
    <string name="notif_content_text_last">Last song logged:</string>

    <!-- Preferences -->
    <string name="pref_foreground_key">foreground_key</string>
    <string name="pref_foreground_title">Log songs in background</string>
    <string name="pref_foreground_summary_on">Background service is running</string>
    <string name="pref_foreground_summary_off">Background service is off</string>
    <string name="pref_log_size_key">log_size_key</string>
    <string name="pref_log_size_title">Max songs in log</string>
    <string name="pref_log_size_summary">Select the maximum amount of songs to be logged at a time. Old songs will be deleted</string>
    <string name="pref_log_size_hint">minutes</string>
    <string name="pref_timeout_key">timeout_key</string>
    <string name="pref_timeout_title">Timeout</string>
    <string name="pref_timeout_summary">Select the timeout for logging same song twice</string>
    <string name="pref_timeout_default_value">10</string>
    <string name="pref_first_launch_key">first_launch_key</string>


    <!-- Dialog -->
    <string name="dialog_broadcast_title">Enable Device Broadcast Status</string>
    <string name="dialog_broadcast_message">SpotLog needs \'Device Broadcast Status\' enabled in
        Spotify to work. Go to Spotify settings and enable it.</string>
    <string name="dialog_broadcast_positive">Open Spotify</string>
    <string name="dialog_broadcast_negative">Cancel</string>
    <string name="dialog_package_title">Spotify not installed</string>
    <string name="dialog_package_message">Spotify is required for this app to work.</string>
    <string name="dialog_package_negative">Exit</string>



</resources>
