<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preference Title">

    <SwitchPreferenceCompat
        android:key="@string/pref_foreground_key"
        android:title="@string/pref_foreground_title"
        android:summaryOn="@string/pref_foreground_summary_on"
        android:summaryOff="@string/pref_foreground_summary_off"
        android:defaultValue="@bool/pref_foreground_default_value" />

    <ListPreference
        android:key="@string/pref_log_size_key"
        android:title="@string/pref_log_size_title"
        android:summary="@string/pref_log_size_summary"
        android:entries="@array/pref_log_size_entries"
        android:entryValues="@array/pref_log_size_values"
        android:defaultValue="@integer/pref_log_size_default_value">
    </ListPreference>

</PreferenceScreen>